bookinfo/routing/virtual-service-reviews-timeout-1s.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: reviews
    timeout: 1s
